--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,4 @@
 #lumDiv {
-    float: left;
-    width: 49%;
     text-align: center;
     font-size: 25px;
     font-weight: bold;
@@ -9,8 +7,6 @@
 }
 
 #disDiv {
-  float: right;
-  width: 49%;
   text-align: center;
   font-size: 25px;
   font-weight: bold;
@@ -22,12 +18,38 @@
   font-size: 25px;
   font-weight: bold;
   text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
+.number {
+  padding: 10px;
 }
 
 .allume {
-  color: rgb(4, 150, 4);
+  color: rgb(76, 206, 44);
 }
 
 .eteint{
-  color: rgb(189, 2, 2);
+  color: rgb(248, 98, 98);
 }
+
+.header {
+  width: 15%;
+}
+
+.headers{
+  display: flex;
+  justify-content: space-around;
+  margin: 15px 0;
+}
+
+.footers{
+  display: flex;
+  justify-content: space-around;
+}
+
+.footer {
+  width: 25%;
+}
+
